--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                             </li>
                             <li class="packaging-option">
                                 <div class="packaging-images">
-                                    <img src="https://www.webstaurantstore.com/images/products/main/56499/24577363/choice-21-x-13-x-4-deep-full-pan-corrugated-catering-box.jpg" alt="Bulk Box with Internal Trays 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+1';">
-                                    <img src="https://www.packnwood.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/2/1/210woodtray39.jpg" alt="Bulk Box with Internal Trays 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+2';">
+                                    <img src="box.png" alt="Bulk Box with Internal Trays 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+1';">
+                                    <img src="box.png" alt="Bulk Box with Internal Trays 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+2';">
                                 </div>
                                 "B. **Bulk Boxes with Internal Trays:** Treats are delivered in bulk boxes, but include disposable serving trays inside that can be easily lifted out and placed directly onto your display area."
                             </li>
