--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
                         <ul class="mt-4 space-y-4">
                             <li class="packaging-option">
                                 <div class="packaging-images">
-                                    <img src="https://www.papermart.com/images/products/26002_main_20220615104438.jpg" alt="Plain Bulk Bakery Box" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Plain+Bulk+Box';">
+                                    <img src="box.png" alt="Plain Bulk Bakery Box" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Plain+Bulk+Box';">
                                 </div>
                                 "A. **Plain Bulk Boxes:** Treats are securely packed in simple, unadorned cardboard boxes, ideal for efficient transport. Your team would then arrange them for display at the venue."
                             </li>
                             <li class="packaging-option">
                                 <div class="packaging-images">
                                     <img src="box.png" alt="Bulk Box with Internal Trays 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+1';">
-                                    <img src="box.png" alt="Bulk Box with Internal Trays 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+2';">
+                                    <img src="tray.png" alt="Bulk Box with Internal Trays 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+2';">
                                 </div>
                                 "B. **Bulk Boxes with Internal Trays:** Treats are delivered in bulk boxes, but include disposable serving trays inside that can be easily lifted out and placed directly onto your display area."
                             </li>
