--- a/index.html
+++ b/index.html
@@ -183,27 +183,27 @@
                         <ul class="mt-4 space-y-4">
                             <li class="packaging-option">
                                 <div class="packaging-images">
-                                    <img src="box.png" alt="Plain Bulk Bakery Box" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Plain+Bulk+Box';">
+                                    <img src="box.png" alt="Plain Bulk Bakery Box Placeholder" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Plain+Bulk+Box';">
                                 </div>
                                 "A. **Plain Bulk Boxes:** Treats are securely packed in simple, unadorned cardboard boxes, ideal for efficient transport. Your team would then arrange them for display at the venue."
                             </li>
                             <li class="packaging-option">
                                 <div class="packaging-images">
-                                    <img src="box.png" alt="Bulk Box with Internal Trays 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+1';">
-                                    <img src="tray.png" alt="Bulk Box with Internal Trays 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Box+with+Trays+2';">
+                                    <img src="box.png" alt="Bulk Box with Internal Trays Placeholder 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Bulk+Box+with+Trays+1';">
+                                    <img src="tray.png" alt="Bulk Box with Internal Trays Placeholder 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Bulk+Box+with+Trays+2';">
                                 </div>
                                 "B. **Bulk Boxes with Internal Trays:** Treats are delivered in bulk boxes, but include disposable serving trays inside that can be easily lifted out and placed directly onto your display area."
                             </li>
                             <li class="packaging-option">
                                 <div class="packaging-images">
-                                    <img src="IMG_0718.png" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Pre-arranged+Tray';">
+                                    <img src="IMG_0718.png" alt="Pre-arranged Catering Tray Placeholder" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Pre-arranged+Catering+Tray';">
                                 </div>
                                 "C. **Pre-arranged Catering Trays:** Treats are artfully arranged on disposable catering trays, ready for immediate placement on your dessert table, requiring no additional setup from your team."
                             </li>
                             <li class="packaging-option">
                                 <div class="packaging-images">
-                                    <img src="https://www.brpboxshop.com/images/product/detail/3389_main_20220615104438.jpg" alt="Windowed Display Box 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Windowed+Display+Box+1';">
-                                    <img src="https://i.etsystatic.com/15233156/r/il/649e29/2583842183/il_fullxfull.2583842183_1o31.jpg" alt="Windowed Display Box 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Windowed+Display+Box+2';">
+                                    <img src="open.webp" alt="Windowed Display Box Placeholder 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Windowed+Display+Box+1';">
+                                    <img src="closed.webp" alt="Windowed Display Box Placeholder 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Windowed+Display+Box+2';">
                                 </div>
                                 "D. **Windowed Display Boxes:** Treats are presented in attractive boxes featuring a clear window, designed to be placed directly on your dessert table as part of the overall display."
                             </li>
