--- a/index.html
+++ b/index.html
@@ -189,9 +189,8 @@
                             </li>
                             <li class="packaging-option">
                                 <div class="packaging-images">
-                                    <img src="box.png" alt="Bulk Box with Internal Trays Placeholder 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Bulk+Box+with+Trays+1';">
-                                    <img src="tray.png" alt="Bulk Box with Internal Trays Placeholder 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Bulk+Box+with+Trays+2';">
-                                </div>
+                                    <img src="box.png" alt="Bulk Box with Internal Trays Placeholder 1" onerror="this.onerror=null;this.src='box.png">
+                                    <img src="tray.png" alt="Bulk Box with Internal Trays Placeholder 2" onerror="this.onerror=null;this.src='box.png">
                                 "B. **Bulk Boxes with Internal Trays:** Treats are delivered in bulk boxes, but include disposable serving trays inside that can be easily lifted out and placed directly onto your display area."
                             </li>
                             <li class="packaging-option">
@@ -202,8 +201,8 @@
                             </li>
                             <li class="packaging-option">
                                 <div class="packaging-images">
-                                    <img src="open.webp" alt="Windowed Display Box Placeholder 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Windowed+Display+Box+1';">
-                                    <img src="closed.webp" alt="Windowed Display Box Placeholder 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Windowed+Display+Box+2';">
+                                    <img src="open.webp" alt="Windowed Display Box Placeholder 1" onerror="open.webp">
+                                    <img src="closed.webp" alt="Windowed Display Box Placeholder 2" onerror="this.onerror=null;this.src='closed.webp">
                                 </div>
                                 "D. **Windowed Display Boxes:** Treats are presented in attractive boxes featuring a clear window, designed to be placed directly on your dessert table as part of the overall display."
                             </li>
