--- a/index.html
+++ b/index.html
@@ -67,67 +67,39 @@
             margin-bottom: 8px;
         }
         ul ul { /* Nested lists for sub-questions/options */
-            list-style: none; /* Removed disc to control spacing better with Tailwind */
+            list-style: none; /* Changed to none as descriptions are now custom */
             padding-left: 0;
             margin-top: 10px;
         }
         ul ul li {
-            margin-bottom: 10px;
+            margin-bottom: 20px; /* Increased spacing for new content */
             font-size: 1em;
             color: #4a4a4a; /* Slightly lighter for sub-text */
-            padding-left: 20px; /* Indent for readability */
-            position: relative;
-        }
-        ul ul li::before { /* Custom bullet point */
-            content: "•";
-            color: #F8A4B8; /* Pink bullet */
-            position: absolute;
-            left: 0;
-            top: 0;
-        }
-        ul ul ul { /* Further nested list for packaging options */
-            list-style: none; /* Removed circle to control spacing better with Tailwind */
-            padding-left: 0;
-            margin-top: 5px;
-        }
-        ul ul ul li {
-            font-size: 0.95em;
-            margin-bottom: 10px; /* Increased margin for spacing */
-            color: #5a5a5a;
-            padding-left: 20px; /* Indent for readability */
-            position: relative;
-        }
-        ul ul ul li::before { /* Custom bullet point for nested options */
-            content: "-";
-            color: #8A6F5C; /* Lighter chocolate dash */
-            position: absolute;
-            left: 0;
-            top: 0;
         }
         .packaging-option {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            margin-bottom: 20px; /* Space between options */
-            padding: 10px;
+            background-color: #FDFBF8; /* Slightly off-white for distinction */
             border: 1px solid #F8E6DD;
-            border-radius: 0.75rem;
-            background-color: #fdfcfb;
+            border-radius: 0.75rem; /* Rounded corners for the option box */
+            padding: 15px;
+            margin-bottom: 15px;
+        }
+        .packaging-option strong {
+            font-size: 1.15em; /* Slightly larger for option titles */
+            margin-bottom: 10px;
         }
         .packaging-images {
             display: flex;
-            justify-content: center;
-            gap: 10px; /* Space between images */
-            margin-bottom: 10px;
-            flex-wrap: wrap; /* Allow images to wrap on smaller screens */
+            flex-wrap: wrap;
+            gap: 1rem; /* Space between images */
+            margin-top: 1rem;
+            justify-content: center; /* Center images within their container */
         }
-        .packaging-option img {
-            width: 150px; /* Fixed width for images */
-            height: 100px; /* Fixed height for images */
-            object-fit: contain; /* Ensures image content is visible */
-            border-radius: 0.5rem;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+        .packaging-images img {
+            border-radius: 0.5rem; /* Rounded corners for images */
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05); /* Subtle shadow for images */
+            width: 200px; /* Fixed width for consistency */
+            height: 120px; /* Fixed height for consistency */
+            object-fit: cover; /* Ensures images cover the area without distortion */
         }
 
         /* Print button specific styles */
@@ -165,10 +137,10 @@
         <h1 class="main-title">Dipped Sweets NYC</h1>
         <p class="subtitle">Follow-Up Details for Our Partnership</p>
 
-        <ul class="space-y-6">
+        <ul>
             <li>
                 <strong>1. Delivery & On-Site Logistics</strong>
-                <ul class="mt-4 space-y-3">
+                <ul>
                     <li>"For delivery and drop-off on October 21st, who will be our primary on-site contact?"</li>
                     <li>"Where at the venue should we deliver the treats? Is there a specific loading dock, entrance, or a designated area to bring them directly to?"</li>
                     <li>"Will you need any quick assistance setting them up once they're delivered, or will your team handle the full display arrangement?"</li>
@@ -178,38 +150,37 @@
 
             <li>
                 <strong>2. Packaging & Presentation</strong>
-                <ul class="mt-4 space-y-3">
-                    <li>"Regarding how the treats will be packaged for delivery, we can offer a few options for the individually wrapped Rice Crispy Treats, Cake Pops, and Gourmet Pretzel Rods:"
-                        <ul class="mt-4 space-y-4">
-                            <li class="packaging-option">
-                                <div class="packaging-images">
-                                    <img src="box.png" alt="Plain Bulk Bakery Box Placeholder" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Plain+Bulk+Box';">
-                                </div>
-                                "A. **Plain Bulk Boxes:** Treats are securely packed in simple, unadorned cardboard boxes, ideal for efficient transport. Your team would then arrange them for display at the venue."
-                            </li>
-                            <li class="packaging-option">
-                                <div class="packaging-images">
-                                    <img src="box.png" alt="Bulk Box with Internal Trays Placeholder 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Bulk+Box+with+Trays+1';">
-                                    <img src="tray.png" alt="Bulk Box with Internal Trays Placeholder 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Bulk+Box+with+Trays+2';">
-                                </div>
-                                "B. **Bulk Boxes with Internal Trays:** Treats are delivered in bulk boxes, but include disposable serving trays inside that can be easily lifted out and placed directly onto your display area."
-                            </li>
-                            <li class="packaging-option">
-                                <div class="packaging-images">
-                                    <img src="IMG_0718.png" alt="Pre-arranged Catering Tray Placeholder" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Pre-arranged+Catering+Tray';">
-                                </div>
-                                "C. **Pre-arranged Catering Trays:** Treats are artfully arranged on disposable catering trays, ready for immediate placement on your dessert table, requiring no additional setup from your team."
-                            </li>
-                            <li class="packaging-option">
-                                <div class="packaging-images">
-                                    <img src="open.webp" alt="Windowed Display Box Placeholder 1" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Windowed+Display+Box+1';">
-                                    <img src="closed.webp" alt="Windowed Display Box Placeholder 2" onerror="this.onerror=null;this.src='https://placehold.co/150x100/F8E6DD/6F4E37?text=Windowed+Display+Box+2';">
-                                </div>
-                                "D. **Windowed Display Boxes:** Treats are presented in attractive boxes featuring a clear window, designed to be placed directly on your dessert table as part of the overall display."
-                            </li>
-                        </ul>
-                        <p class="mt-4 pl-5 text-gray-700">"Which option works best for your team and the event setup?"</p>
+                <p class="mb-4">Regarding how the treats will be packaged for delivery, we can offer a few options. We can deliver the individually wrapped Rice Crispy Treats, Cake Pops, and Gourmet Pretzel Rods:</p>
+                <ul>
+                    <li class="packaging-option">
+                        <strong>A. Plain Bulk Boxes:</strong> Treats are securely packed in simple, unadorned cardboard boxes, ideal for efficient transport. Your team would then arrange them for display at the venue.
+                        <div class="packaging-images">
+                            <img src="box.png>
+                        </div>
                     </li>
+                    <li class="packaging-option">
+                        <strong>B. Bulk Boxes with Internal Trays:</strong> Treats are delivered in bulk boxes, but include disposable serving trays inside that can be easily lifted out and placed directly onto your display area.
+                        <div class="packaging-images">
+                            <img src="box.png">
+                            <img src="tray.jpg">
+                        </div>
+                    </li>
+                    <li class="packaging-option">
+                        <strong>C. Pre-arranged Catering Trays:</strong> Treats are artfully arranged on disposable catering trays, ready for immediate placement on your dessert table, requiring no additional setup from your team.
+                        <div class="packaging-images">
+                            <img src="IMG_0718.png">
+                        </div>
+                    </li>
+                    <li class="packaging-option">
+                        <strong>D. Windowed Display Boxes:</strong> Treats are presented in attractive boxes featuring a clear window, designed to be placed directly on your dessert table as part of the overall display.
+                        <div class="packaging-images">
+                            <img src="open.webp">
+                            <img src="closed.webp"> alt="Windowed Display Box Example 2">
+                        </div>
+                    </li>
+                </ul>
+                <p class="mt-4">Which option works best for your team and the event setup?</p>
+                <ul>
                     <li>"What is the color scheme or theme of the event?"</li>
                     <li>"Will our treats be the sole dessert, or will they be part of a larger dessert table?"</li>
                     <li>"Do we need to provide any labels for the different treats?"</li>
@@ -218,7 +189,7 @@
 
             <li>
                 <strong>3. Venue & Access Details</strong>
-                <ul class="mt-4 space-y-3">
+                <ul>
                     <li>"What are the parking and access instructions for delivery vehicles at that time?"</li>
                     <li>"Is there anything specific we need to know about venue access or security procedures for delivery personnel?"</li>
                     <li>"Will there be on-site refrigeration available for us to use?"</li>
@@ -226,8 +197,8 @@
             </li>
 
             <li>
-                <strong>4. Event Timeline & Final Communication</strong>
-                <ul class="mt-4 space-y-3">
+                <strong>4. Event Timeline & Final Confirmation</strong>
+                <ul>
                     <li>"Can you provide a high-level timeline for the event (e.g., when doors open, when dessert course is planned)?"</li>
                     <li>"What are the next steps on your end, and what's the best way to communicate any last-minute logistical details leading up to and on the day of the event?"</li>
                 </ul>
