--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <li class="packaging-option">
                         <strong>A. Plain Bulk Boxes:</strong> Treats are securely packed in simple, unadorned cardboard boxes, ideal for efficient transport. Your team would then arrange them for display at the venue.
                         <div class="packaging-images">
-                            <img src="box.png>
+                            <img src="box.png">
                         </div>
                     </li>
                     <li class="packaging-option">
@@ -175,7 +175,7 @@
                         <strong>D. Windowed Display Boxes:</strong> Treats are presented in attractive boxes featuring a clear window, designed to be placed directly on your dessert table as part of the overall display.
                         <div class="packaging-images">
                             <img src="open.webp">
-                            <img src="closed.webp"> alt="Windowed Display Box Example 2">
+                            <img src="closed .webp"> 
                         </div>
                     </li>
                 </ul>
