--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
         }
         .container {
             background-color: #FFFFFF; /* Clean white background */
-            border-radius: 2rem; /* Matches sweet-card and header/footer radius */
-            box-shadow: 0 15px 30px -10px rgba(0,0,0,0.08); /* Matches sweet-card shadow */
-            padding: 40px;
-            max-width: 850px;
+            border-radius: 2.5rem; /* Slightly more rounded for a softer look */
+            box-shadow: 0 20px 40px -15px rgba(0,0,0,0.1); /* Slightly deeper shadow for elegance */
+            padding: 40px; /* Increased padding for more breathing room */
+            max-width: 820px; /* Adjusted max-width for better content flow */
             width: 100%;
             text-align: left;
             border: 1px solid #F8E6DD; /* Light peach border from header-bg */
         }
-        h1.main-title { /* Specific class for the main title to apply Poppins font */
-            color: #6F4E37; /* Chocolate Brown from your website */
-            margin-bottom: 25px;
+        h1.main-title {
+            color: #6F4E37; /* Chocolate Brown */
+            margin-bottom: 25px; /* More space below title */
             text-align: center;
-            font-size: 2.5rem;
-            font-weight: 700;
-            letter-spacing: -0.02em;
+            font-size: 2.75rem; /* Larger for more impact */
+            font-weight: 800; /* Bolder */
+            letter-spacing: -0.03em; /* Tighter letter spacing for headings */
         }
         .subtitle {
-            color: #8A6F5C; /* Lighter chocolate from your hero tagline */
-            margin-top: -15px;
-            margin-bottom: 30px;
+            color: #8A6F5C; /* Lighter chocolate */
+            margin-top: -15px; /* Closer to title */
+            margin-bottom: 40px; /* More space below subtitle */
             text-align: center;
-            font-size: 1.25rem;
+            font-size: 1.25rem; /* Slightly larger */
             font-weight: 500;
         }
         ul {
@@ -55,78 +55,90 @@
             padding-left: 0;
         }
         li {
-            margin-bottom: 25px;
-            color: #333333; /* Dark grey from your website body text */
-            line-height: 1.6;
+            margin-bottom: 28px; /* More space between main list items */
+            color: #333333;
+            line-height: 1.65; /* Improved line height for readability */
         }
         li strong {
             color: #6F4E37; /* Chocolate Brown for section titles */
-            font-size: 1.3em;
-            font-weight: 600;
+            font-size: 1.35em; /* Larger and more prominent */
+            font-weight: 700; /* Bolder */
             display: block;
-            margin-bottom: 8px;
+            margin-bottom: 10px; /* More space below strong titles */
         }
         ul ul { /* Nested lists for sub-questions/options */
-            list-style: none; /* Changed to none as descriptions are now custom */
+            list-style: none;
             padding-left: 0;
-            margin-top: 10px;
+            margin-top: 12px; /* More space above nested list */
         }
         ul ul li {
-            margin-bottom: 20px; /* Increased spacing for new content */
-            font-size: 1em;
-            color: #4a4a4a; /* Slightly lighter for sub-text */
+            margin-bottom: 15px; /* Adjusted spacing for nested list items */
+            font-size: 1em; /* Standard size for readability */
+            color: #4a4a4a;
+        }
+        .section-divider {
+            border-top: 1px solid #F8E6DD;
+            margin: 40px 0; /* More vertical space around dividers */
         }
         .packaging-option {
-            background-color: #FDFBF8; /* Slightly off-white for distinction */
+            background-color: #FDFBF8;
             border: 1px solid #F8E6DD;
-            border-radius: 0.75rem; /* Rounded corners for the option box */
-            padding: 15px;
-            margin-bottom: 15px;
+            border-radius: 1rem; /* Slightly more rounded */
+            padding: 20px; /* More padding inside option boxes */
+            margin-bottom: 20px; /* More space between option boxes */
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; /* Smooth hover effect */
+        }
+        .packaging-option:hover {
+            transform: translateY(-3px); /* Lift effect on hover */
+            box-shadow: 0 10px 20px rgba(0,0,0,0.08); /* Enhanced shadow on hover */
         }
         .packaging-option strong {
-            font-size: 1.15em; /* Slightly larger for option titles */
-            margin-bottom: 10px;
+            font-size: 1.25em; /* More prominent option titles */
+            margin-bottom: 12px; /* More space below option titles */
         }
         .packaging-images {
             display: flex;
             flex-wrap: wrap;
-            gap: 1rem; /* Space between images */
+            gap: 1rem; /* More space between images */
             margin-top: 1rem;
-            justify-content: center; /* Center images within their container */
+            justify-content: center;
         }
         .packaging-images img {
-            border-radius: 0.5rem; /* Rounded corners for images */
-            box-shadow: 0 4px 10px rgba(0,0,0,0.05); /* Subtle shadow for images */
-            /* New responsive layout properties */
-            flex-grow: 1; /* Allows images to grow to fill space */
-            flex-shrink: 1; /* Allows images to shrink if needed */
-            flex-basis: 180px; /* A base width for each image before growing/shrinking */
-            max-width: 100%; /* Ensures images don't overflow their container */
-            height: auto; /* Maintains aspect ratio */
-            object-fit: cover; /* Ensures images cover the area without distortion */
-            aspect-ratio: 5 / 3; /* Maintains a consistent aspect ratio (200px/120px) */
+            border-radius: 0.75rem; /* More rounded image corners */
+            box-shadow: 0 6px 15px rgba(0,0,0,0.08); /* Clearer shadow for images */
+            flex-grow: 0;
+            flex-shrink: 1;
+            flex-basis: 180px; /* Base width for images */
+            max-width: 250px; /* Maximum width for images */
+            height: auto;
+            object-fit: cover;
+            aspect-ratio: 5 / 3; /* Maintains aspect ratio */
+            transition: transform 0.2s ease-in-out; /* Smooth hover effect */
+        }
+        .packaging-images img:hover {
+            transform: scale(1.03); /* Slight zoom on hover */
         }
 
         /* Print button specific styles */
         .print-button {
-            background-color: #F8A4B8; /* Soft Pink from your CTA button */
+            background-color: #F8A4B8;
             color: white;
-            padding: 12px 25px;
-            border-radius: 9999px; /* Fully rounded */
+            padding: 14px 30px; /* Larger button padding */
+            border-radius: 9999px;
             font-weight: 700;
-            font-size: 1.1rem;
+            font-size: 1.15rem; /* Larger font size for button */
             border: none;
             cursor: pointer;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15); /* More prominent shadow */
             transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
-            margin-top: 30px;
-            display: block; /* Make it a block element */
-            margin-left: auto; /* Center the button */
-            margin-right: auto; /* Center the button */
+            margin-top: 40px; /* More space above button */
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
         .print-button:hover {
-            background-color: #E28FA0; /* Darker Pink on hover */
-            transform: translateY(-2px);
+            background-color: #E28FA0;
+            transform: translateY(-3px); /* More pronounced lift on hover */
         }
 
         /* Hide print button when printing */
@@ -152,6 +164,8 @@
                     <li>"Will there be a table or display stands for us to use, or do we need to bring our own?"</li>
                 </ul>
             </li>
+
+            <hr class="section-divider">
 
             <li>
                 <strong>2. Packaging & Presentation</strong>
@@ -192,6 +206,8 @@
                 </ul>
             </li>
 
+            <hr class="section-divider">
+
             <li>
                 <strong>3. Venue & Access Details</strong>
                 <ul>
@@ -200,6 +216,8 @@
                     <li>"Will there be on-site refrigeration available for us to use?"</li>
                 </ul>
             </li>
+
+            <hr class="section-divider">
 
             <li>
                 <strong>4. Event Timeline & Final Confirmation</strong>
