--- a/index.html
+++ b/index.html
@@ -18,131 +18,219 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            padding: 20px;
+            padding: 15px;
             box-sizing: border-box;
         }
         h1, h2, h3, h4 {
             font-family: 'Poppins', sans-serif; /* Heading font from your website */
         }
         .container {
-            background-color: #FFFFFF; /* Clean white background */
-            border-radius: 2.5rem; /* Slightly more rounded for a softer look */
-            box-shadow: 0 20px 40px -15px rgba(0,0,0,0.1); /* Slightly deeper shadow for elegance */
-            padding: 40px; /* Increased padding for more breathing room */
-            max-width: 820px; /* Adjusted max-width for better content flow */
+            background-color: #FFFFFF;
+            border-radius: 2.5rem;
+            box-shadow: 0 20px 40px -15px rgba(0,0,0,0.1);
+            padding: 40px;
+            max-width: 850px;
             width: 100%;
             text-align: left;
-            border: 1px solid #F8E6DD; /* Light peach border from header-bg */
+            border: 1px solid #F8E6DD;
         }
         h1.main-title {
-            color: #6F4E37; /* Chocolate Brown */
-            margin-bottom: 25px; /* More space below title */
+            color: #6F4E37;
+            margin-bottom: 25px;
             text-align: center;
-            font-size: 2.75rem; /* Larger for more impact */
-            font-weight: 800; /* Bolder */
-            letter-spacing: -0.03em; /* Tighter letter spacing for headings */
+            font-size: 2.5rem;
+            font-weight: 800;
+            letter-spacing: -0.03em;
+            line-height: 1.1;
         }
         .subtitle {
-            color: #8A6F5C; /* Lighter chocolate */
-            margin-top: -15px; /* Closer to title */
-            margin-bottom: 40px; /* More space below subtitle */
+            color: #8A6F5C;
+            margin-top: -10px;
+            margin-bottom: 40px;
             text-align: center;
-            font-size: 1.25rem; /* Slightly larger */
+            font-size: 1.2rem;
             font-weight: 500;
+            line-height: 1.3;
         }
         ul {
-            list-style: none;
+            list-style: none; /* Keep main sections without bullets */
             padding-left: 0;
         }
         li {
-            margin-bottom: 28px; /* More space between main list items */
+            margin-bottom: 25px;
             color: #333333;
-            line-height: 1.65; /* Improved line height for readability */
+            line-height: 1.6;
         }
         li strong {
-            color: #6F4E37; /* Chocolate Brown for section titles */
-            font-size: 1.35em; /* Larger and more prominent */
-            font-weight: 700; /* Bolder */
+            color: #6F4E37;
+            font-size: 1.3em;
+            font-weight: 700;
             display: block;
-            margin-bottom: 10px; /* More space below strong titles */
+            margin-bottom: 12px;
+            padding-bottom: 4px;
+            border-bottom: 1px solid #F8E6DD;
         }
-        ul ul { /* Nested lists for sub-questions/options */
-            list-style: none;
-            padding-left: 0;
-            margin-top: 12px; /* More space above nested list */
+        /* Styles for the actual questions (nested lists) */
+        ul li ul {
+            list-style: disc; /* Bullet points for questions */
+            padding-left: 25px;
+            margin-top: 12px;
+            background-color: #FDFBF8;
+            border-radius: 0.75rem;
+            padding: 15px 20px 10px 25px;
+            border: 1px solid #F8E6DD;
         }
-        ul ul li {
-            margin-bottom: 15px; /* Adjusted spacing for nested list items */
-            font-size: 1em; /* Standard size for readability */
+        /* Color the bullet points */
+        ul li ul li::marker {
+            color: #F8A4B8; /* Soft Pink color from the button */
+        }
+        ul li ul li {
+            margin-bottom: 8px;
+            font-size: 0.98em;
             color: #4a4a4a;
+            line-height: 1.5;
+        }
+        ul li ul li:last-child {
+            margin-bottom: 0;
         }
         .section-divider {
             border-top: 1px solid #F8E6DD;
-            margin: 40px 0; /* More vertical space around dividers */
+            margin: 35px 0;
         }
         .packaging-option {
+            list-style: none; /* Explicitly remove bullet points for packaging options */
             background-color: #FDFBF8;
             border: 1px solid #F8E6DD;
-            border-radius: 1rem; /* Slightly more rounded */
-            padding: 20px; /* More padding inside option boxes */
-            margin-bottom: 20px; /* More space between option boxes */
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; /* Smooth hover effect */
+            border-radius: 1rem;
+            padding: 20px;
+            margin-bottom: 20px;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
         }
         .packaging-option:hover {
-            transform: translateY(-3px); /* Lift effect on hover */
-            box-shadow: 0 10px 20px rgba(0,0,0,0.08); /* Enhanced shadow on hover */
+            transform: translateY(-3px);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.08);
+            background-color: #FCF9F6;
         }
         .packaging-option strong {
-            font-size: 1.25em; /* More prominent option titles */
-            margin-bottom: 12px; /* More space below option titles */
+            font-size: 1.2em;
+            margin-bottom: 12px;
+            border-bottom: none; /* Ensure no border under these titles */
+        }
+        .packaging-option p {
+            margin-bottom: 0.8rem;
+            line-height: 1.5;
         }
         .packaging-images {
             display: flex;
             flex-wrap: wrap;
-            gap: 1rem; /* More space between images */
-            margin-top: 1rem;
+            gap: 1rem;
+            margin-top: 0.8rem;
             justify-content: center;
         }
         .packaging-images img {
-            border-radius: 0.75rem; /* More rounded image corners */
-            box-shadow: 0 6px 15px rgba(0,0,0,0.08); /* Clearer shadow for images */
+            border-radius: 0.75rem;
+            box-shadow: 0 6px 15px rgba(0,0,0,0.08);
             flex-grow: 0;
             flex-shrink: 1;
-            flex-basis: 180px; /* Base width for images */
-            max-width: 250px; /* Maximum width for images */
+            flex-basis: 160px;
+            max-width: 220px;
             height: auto;
             object-fit: cover;
-            aspect-ratio: 5 / 3; /* Maintains aspect ratio */
-            transition: transform 0.2s ease-in-out; /* Smooth hover effect */
+            aspect-ratio: 5 / 3;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
         }
         .packaging-images img:hover {
-            transform: scale(1.03); /* Slight zoom on hover */
+            transform: scale(1.03);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.12);
         }
 
         /* Print button specific styles */
         .print-button {
             background-color: #F8A4B8;
             color: white;
-            padding: 14px 30px; /* Larger button padding */
+            padding: 12px 28px;
             border-radius: 9999px;
             font-weight: 700;
-            font-size: 1.15rem; /* Larger font size for button */
+            font-size: 1.1rem;
             border: none;
             cursor: pointer;
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15); /* More prominent shadow */
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
             transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
-            margin-top: 40px; /* More space above button */
+            margin-top: 40px;
             display: block;
             margin-left: auto;
             margin-right: auto;
         }
         .print-button:hover {
             background-color: #E28FA0;
-            transform: translateY(-3px); /* More pronounced lift on hover */
+            transform: translateY(-3px);
         }
 
-        /* Hide print button when printing */
+        /* Print-specific adjustments to fit on one page */
         @media print {
+            html, body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+            }
+            .container {
+                box-shadow: none;
+                border: none;
+                padding: 15px;
+                max-width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+            }
+            h1.main-title {
+                font-size: 2rem;
+                margin-bottom: 15px;
+            }
+            .subtitle {
+                font-size: 1rem;
+                margin-bottom: 25px;
+            }
+            li {
+                margin-bottom: 15px;
+            }
+            li strong {
+                font-size: 1.1em;
+                margin-bottom: 8px;
+                border-bottom: none;
+            }
+            ul li ul { /* Targeting the question lists for print */
+                padding: 10px 15px 5px 20px;
+                margin-top: 8px;
+            }
+            ul li ul li {
+                font-size: 0.9em;
+                margin-bottom: 5px;
+            }
+            .section-divider {
+                margin: 25px 0;
+            }
+            .packaging-option {
+                padding: 15px;
+                margin-bottom: 15px;
+            }
+            .packaging-option strong {
+                font-size: 1.05em;
+                margin-bottom: 10px;
+            }
+            .packaging-option p {
+                margin-bottom: 0.5rem;
+            }
+            .packaging-images {
+                gap: 0.5rem;
+                margin-top: 0.5rem;
+            }
+            .packaging-images img {
+                flex-basis: 120px;
+                max-width: 180px;
+                box-shadow: none;
+            }
             .print-button {
                 display: none;
             }
